fixed white space problem

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -17,7 +17,7 @@
   margin-bottom: 36px;
   margin-right: -120px;
   margin-left: 120px;
-  // text-align: -webkit-center;
+  width: 960px;
 }
 
 [class*=arrange]{
